Test funzioni: createElement, createTextNode e appendChild

--- a/index.html
+++ b/index.html
@@ -34,6 +34,10 @@
         
 
         <p class="hidden" id="level_sentence"></p>
+
+        <div id="game_grid">
+
+        </div>
       </div>
 
     </div>
