Aggiunta immagine della bomba dinamica

--- a/index.html
+++ b/index.html
@@ -32,8 +32,9 @@
           </a>
         </div>
         
-
         <p class="hidden" id="level_sentence"></p>
+
+        <div id="grid_container"></div>
 
       </div>
 
